# Prompt_optimizer

./: .gitignore  README.md  auto_evolve.py  pyproject.toml
docs/: app.js  index.html  styles.css
optimizer/: __init__.py  analyzer.py  backends.py  cli.py  compiler.py  cycle.py  db.py  evaluators.py  gate.py  generator.py  models.py  runner.py  seed.py  selftest.py  serve.py  stats.py  synthetic.py
optimizer/static/: app.js  index.html  polish.css  provider.css
tests/: test_core.py  test_serve.py
