[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "Evidence-driven prompt optimization with leakage-resistant promotion gates."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "jinja2>=3.1",
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
embed = ["sentence-transformers>=2.7"]

[project.scripts]
prompt-optimizer = "optimizer.cli:app"

[tool.setuptools.packages.find]
include = ["optimizer*"]
